[package]
name = "ramen"
version = "0.0.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { version = "0.11.1", optional = true }

[features]
default = []
nightly-docs = []
parking-lot = ["parking_lot"]
